hphp/test/slow/is_expression/is-expression-generic.php.expectf
Fatal error: Erased generics are not allowed in is/as expressions in %s on line 4
